# github-app-geo-project

./: .dockerignore  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .prettierignore  .prospector-fix.yaml  .prospector.yaml  .snyk  AGENT.md  AGENTS.md  APPLICATION-CONFIG.md  AUDIT-CONFIG.md  AUDIT.md  AUTO-CONFIG.md  BACKPORT-CONFIG.md  CHANGELOG-CONFIG.md  CHANGELOG.md  CLEAN-CONFIG.md  DELETE-OLD-WORKFLOW-RUN-CONFIG.md  Dockerfile  Makefile  PROJECT-CONFIG.md  PULL-REQUEST-CHECKS-CONFIG.md  PULL-REQUEST-LINKS-CONFIG.md  README.md  VERSIONS-CONFIG.md  development.ini  docker-compose.override.sample.yaml  docker-compose.yaml  gunicorn.conf.py  jsonschema-gentypes.yaml  package-lock.json  package.json  production.ini  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  dpkg-versions.yaml  publish.yaml  renovate.json5  schema-copy  spell-ignore-words.txt
.github/workflows/: failed.yaml  main.yaml  pull-request-automation.yaml
acceptance_tests/: __init__.py  acceptance_test.py
ci/: config.yaml  dpkg-versions.yaml  requirements.txt
docker/test-app/: config.yaml
docker/test-db/: 10-init.sql
example/: changelog-config.yaml
github_app_geo_project/: __init__.py  app.py  application-schema.json  application_configuration.py  configuration.py  models.py  project-schema.json  project_configuration.py  security.py  server.py  settings.py  utils.py
github_app_geo_project/module/: __init__.py  modules.py  utils.py
github_app_geo_project/module/audit/: Audit.md  README.md  __init__.py  configuration.py  dashboard.html  output.html  repository.html  schema.json  utils.py
github_app_geo_project/module/auto_review_merge_close/: README.md  __init__.py  close.py  merge.py  review.py  schema.json
github_app_geo_project/module/backport/: Backport.md  __init__.py  configuration.py  schema.json
github_app_geo_project/module/cache_clean/: README.md  __init__.py
github_app_geo_project/module/changelog/: __init__.py  configuration.py  schema.json
github_app_geo_project/module/clean/: Clean.md  __init__.py  configuration.py  schema.json
github_app_geo_project/module/delete_old_workflow_runs/: Delete_Old_Workflow_Job.md  README.md  __init__.py  configuration.py  schema.json
github_app_geo_project/module/dispatch_publishing/: Dispatch_Publish.md  __init__.py
github_app_geo_project/module/internal/: __init__.py
github_app_geo_project/module/outdated_comments/: Outdated_comments.md  __init__.py  schema.json
github_app_geo_project/module/patch/: __init__.py
github_app_geo_project/module/pull_request/: Checks.md  Links.md  Pull_request_checks.md  Pull_request_links.md  __init__.py  checks-schema.json  checks.py  checks_configuration.py  links-schema.json  links.py  links_configuration.py
github_app_geo_project/module/standard/: Auto-review_merge_close.md  Changelog.md  Patch.md  __init__.py  auto-schema.json  auto.py  auto_close.py  auto_configuration.py  auto_merge.py  auto_review.py  changelog-schema.json  changelog.py  changelog_configuration.py  patch.py
github_app_geo_project/module/tests/: __init__.py  dashboard.html
github_app_geo_project/module/updates/: README.md  __init__.py  configuration.py  schema.json  versions.yaml
github_app_geo_project/module/versions/: Versions.md  __init__.py  configuration.py  dashboard.html  repository.html  schema.json
github_app_geo_project/module/webhook/: __init__.py
github_app_geo_project/module/workflow/: README.md  Workflow.md  __init__.py  dashboard.html  repository.html
github_app_geo_project/scripts/: __init__.py  health_check.py  process_queue.py  send_event.py
github_app_geo_project/static/: favicon_color.py
github_app_geo_project/templates/: __init__.py  dashboard.html  home.html  jobs.html  logs.html  output.html  project.html  welcome.html
github_app_geo_project/views/: __init__.py  dashboard.py  home.py  jobs.py  logs.py  output.py  project.py  schema.py  webhook.py  welcome.py
scripts/: container-entrypoint  get-wiki  redeliver  redeliver-failed-deliveries.mjs  wait-db
tests/: acceptence_test.py  audit_test.py  module_pull_request_links_test.py  module_utils_test.py  module_versions_test.py  template_test.py  test_module.py  test_module_audit.py  test_module_clean.py  test_module_pull_request_links.py  test_module_updates.py  test_module_utils.py  test_module_versions.py  test_module_workflow.py  test_template.py  test_utils.py  test_views.py
