[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = []
ignore = ["ANN401", "C90", "COM812", "D100", "D104", "D105", "D107", "D200", "D202", "D207", "D208", "D212", "E501", "EM101", "EM102", "ERA001", "FA", "FBT001", "FBT002", "FIX002", "I001", "PERF203", "PLR09", "PLR2004", "Q000", "S101", "S113", "SIM105", "T201", "TD002", "W293"]
extend-select = ["UP", "I", "S", "B", "ALL"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = ["ANN", "ARG", "ASYNC", "BLE001", "D", "DTZ", "E722", "FBT003", "INP001", "N", "PGH003", "PLC", "PLR2004", "PLW0603", "PLW1641", "RET", "RUF012", "RUF100", "S104", "S105", "S106", "S108", "S113", "S324", "S603", "S607", "S608", "SLF", "TRY003", "TRY301"]
"**/tests/**" = ["ANN", "ARG", "ASYNC", "BLE001", "D", "DTZ", "E722", "FBT003", "INP001", "N", "PGH003", "PLC", "PLR2004", "PLW0603", "PLW1641", "RET", "RUF012", "RUF100", "S104", "S105", "S106", "S108", "S113", "S324", "S603", "S607", "S608", "SLF", "TRY003", "TRY301"]
"**/test_*.py" = ["ANN", "ARG", "ASYNC", "BLE001", "D", "DTZ", "E722", "FBT003", "INP001", "N", "PGH003", "PLC", "PLR2004", "PLW0603", "PLW1641", "RET", "RUF012", "RUF100", "S104", "S105", "S106", "S108", "S113", "S324", "S603", "S607", "S608", "SLF", "TRY003", "TRY301"]
"**/*_test.py" = ["ANN", "ARG", "ASYNC", "BLE001", "D", "DTZ", "E722", "FBT003", "INP001", "N", "PGH003", "PLC", "PLR2004", "PLW0603", "PLW1641", "RET", "RUF012", "RUF100", "S104", "S105", "S106", "S108", "S113", "S324", "S603", "S607", "S608", "SLF", "TRY003", "TRY301"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
c2cwsgiutils = { version = "6.1.9",  extras = ["standard", "debug", "dev"] }
c2cciutils = "1.7.5"
security-md = "1.0.0"
pyramid-mako = "1.1.0"
jsonmerge = "1.9.2"
markdown = "3.10.2"
pygments = "2.19.2"
html-sanitizer = "2.6.0"
ansi2html = "1.9.2"
apt-repo = "0.5"
debian-inspector = "31.1.1"
codespell = "2.4.1"
pydantic = "2.12.5"
markdownify = "1.2.2"
cryptography = "46.0.5"
urllib3 = "2.6.3"
certifi = "2026.1.4"
sentry-sdk = "2.52.0"
webob = "1.8.9"
waitress = "3.0.2"
lxml-html-clean = "0.4.3"
tag-publish = "1.1.1"
aiohttp = "3.13.3"
githubkit = { version = "0.14.4", extras = ["auth-app"] }
deprecated = "1.3.1"
aiomonitor = "0.7.1"
sqlalchemy = {extras = ["asyncio"], version = "2.0.46"}
asyncpg = "0.31.0"
multi-repo-automation = "1.8.0"
anyio = "4.12.1"
"pre-commit" = "4.5.1"
prek = "0.3.2"

[tool.poetry.group.dev.dependencies]
c2cwsgiutils = { version = "6.1.9",  extras = ["test-images"] }
prospector = { extras = ["with_mypy", "with_bandit", "with_pyroma", "with_ruff"], version = "1.18.0" }
prospector-profile-duplicated = "1.12.0"
prospector-profile-utils = "1.27.0"
pytest = "9.0.2"
pytest-asyncio = "1.3.0"
aioresponses = "0.7.8"
WebTest = "3.0.7"
mypy = "1.19.1"
requests = "2.32.5"
types-pyyaml = "6.0.12.20250915"
types-markdown = "3.10.0.20251106"
types-requests = "2.32.4.20260107"
types-deprecated = "1.3.1.20260130"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "present"

[project]
description = ""
version = "0.0.0"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Typing :: Typed',
]
dynamic = ["dependencies", "version"]
name = "github-app-geo-project"
readme = "README.md"
keywords = ["github", "application", "pyramid"]
license = "BSD-2-Clause"
authors = [{name = "Stéphane Brunner",email = "stephane.brunner@camptocamp.com"}]
packages = [{ include = "github_app_geo_project" }]
include = ["github_app_geo_project/py.typed"]
requires-python = ">=3.11"
dependencies = ["c2cwsgiutils[debug,dev,standard]", "c2cciutils", "security-md", "pyramid-mako", "jsonmerge", "markdown", "pygments", "html-sanitizer", "ansi2html", "apt-repo", "debian-inspector", "codespell", "pydantic", "markdownify", "aioresponses", "pytest-asyncio", "cryptography", "urllib3", "certifi", "sentry-sdk", "webob", "waitress", "lxml-html-clean", "tag-publish", "aiohttp", "aiofiles", "githubkit[auth-app]", "deprecated", "aiomonitor", "sqlalchemy[asyncio]", "asyncpg", "multi-repo-automation", "anyio", "pre-commit", "prek"]

[project.urls]
repository = "https://github.com/camptocamp/github-app-geo-project"
"Bug Tracker" = "https://github.com/camptocamp/github-app-geo-project/issues"

[project.scripts]
process-queue = "github_app_geo_project.scripts.process_queue:main"
send-event = "github_app_geo_project.scripts.send_event:main"
health-check = "github_app_geo_project.scripts.health_check:main"

[project.entry-points."paste.app_factory"]
main = "github_app_geo_project.server:main"

[project.entry-points."ghci.module"]
dispatcher = "github_app_geo_project.module.internal:Dispatcher"
test = "github_app_geo_project.module.tests:TestModule"
changelog = "github_app_geo_project.module.changelog:Changelog"
audit = "github_app_geo_project.module.audit:Audit"
auto-review = "github_app_geo_project.module.auto_review_merge_close.review:AutoReview"
auto-merge = "github_app_geo_project.module.auto_review_merge_close.merge:AutoMerge"
auto-close = "github_app_geo_project.module.auto_review_merge_close.close:AutoClose"
patch = "github_app_geo_project.module.patch:Patch"
versions = "github_app_geo_project.module.versions:Versions"
workflow = "github_app_geo_project.module.workflow:Workflow"
pull-request-checks = "github_app_geo_project.module.pull_request.checks:Checks"
pull-request-links = "github_app_geo_project.module.pull_request.links:Links"
delete-old-workflow-runs = "github_app_geo_project.module.delete_old_workflow_runs:DeleteOldWorkflowRuns"
dispatch-publishing = "github_app_geo_project.module.dispatch_publishing:DispatchPublishing"
clean = "github_app_geo_project.module.clean:Clean"
backport = "github_app_geo_project.module.backport:Backport"
outdated-comments = "github_app_geo_project.module.outdated_comments:OutdatedComments"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning", "poetry-plugin-export"]
build-backend = "poetry.core.masonry.api"
